<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MypurseActivity">
    <ImageView
        android:layout_width="16sp"
        android:layout_height="16sp"
        android:src="@mipmap/back"
        android:id="@+id/back"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="#333333"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_tv5"
        android:textColor="#333333"
        android:textSize="12sp"
        android:id="@+id/bind"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_tv6"
        android:textColor="#333333"
        android:textSize="12sp"
        android:visibility="gone"
        android:id="@+id/bind1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="84dp"
        android:background="@mipmap/my_wallet_bg"
        android:layout_width="match_parent"
        android:layout_height="174dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_tv2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/tv1"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="29870"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_below="@id/tv1"
            android:id="@+id/tv_HB"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_HB"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="10sp"
            android:textColor="#ffffff"
            android:text="@string/wallet_tv3"/>
        <Button
            android:layout_width="58dp"
            android:layout_height="29dp"
            android:textSize="14sp"
            android:id="@+id/tixian"
            android:background="@drawable/bt_wallet"
            android:textColor="#3087ea"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/wallet_tv4"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/rl1"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:id="@+id/rc1"
        android:layout_marginRight="20dp"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>