<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BindBankCardActivity">
    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:id="@+id/back"
        android:src="@mipmap/back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_tv15"
        android:textSize="16sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:id="@+id/rl"
        android:background="@mipmap/bank_card_n"
        android:layout_height="160dp">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/cemera"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/iv_cemera"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_tv10"
            android:textColor="#3087ea"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/iv_cemera"
            android:id="@+id/tv"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:id="@+id/iv"
        android:visibility="gone"
        android:background="@mipmap/bank_card_n"
        android:layout_height="160dp">
    </ImageView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="60dp"
        android:text="@string/bind_tv13"
        android:textColor="#fff"
        android:textSize="14sp"
        android:id="@+id/next"
        android:background="@drawable/bt_bind"
        />
</RelativeLayout>