<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BindingActivity">
    <ImageView
        android:layout_width="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/back"
        android:layout_height="16dp"
        android:src="@mipmap/back"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="#333333"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_tv2"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="50dp"
            android:textSize="16sp"
            android:id="@+id/tv1"
            android:textColor="#333333"/>
        <View
            android:layout_width="48dp"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:background="#3087ea"
            android:id="@+id/v1"
            android:layout_marginLeft="50dp"
            android:layout_below="@id/tv1">
        </View>
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/v1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:background="@mipmap/id_card_front">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_tv5"
                android:id="@+id/bindIdCard"
                android:layout_centerInParent="true"
                android:textColor="#3087ea"
                android:textSize="14sp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_tv3"
            android:layout_marginTop="188dp"
            android:layout_marginLeft="50dp"
            android:textSize="16sp"
            android:layout_below="@id/tv1"
            android:id="@+id/tv2"
            android:textColor="#333333"/>
        <View
            android:layout_width="48dp"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:background="#3087ea"
            android:id="@+id/v2"
            android:layout_marginLeft="50dp"
            android:layout_below="@id/tv2">
        </View>
        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/v2"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:background="@mipmap/bank_card_n">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_tv6"
                android:id="@+id/bindBankCard"
                android:layout_centerInParent="true"
                android:textColor="#3087ea"
                android:textSize="14sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl3"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/tv1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:background="@mipmap/id_card">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="王麻子"
                android:textSize="16sp"
                android:textColor="#666"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/tv_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="男"
                android:textColor="#666"
                android:textSize="14sp"
                android:layout_below="@id/tv_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:id="@+id/tv_sex"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_sex"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:textColor="#666"
                android:text="汉族"
                android:id="@+id/tv_nation"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sex"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:textColor="#666"
                android:textSize="14sp"
                android:id="@+id/tv_idNumber"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl4"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/tv2"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:background="@mipmap/bank_card">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="20dp"
                android:text="中国建设"
                android:textSize="16sp"
                android:id="@+id/tv_bankName"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="储蓄卡"
                android:textSize="12sp"
                android:id="@+id/tv_bankType"
                android:textColor="#ffff"
                android:layout_below="@id/tv_bankName"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13465646"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:id="@+id/tv_bankNumber"
                android:layout_below="@id/tv_bankType"
                android:layout_marginTop="37dp"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textSize="10sp"
        android:textColor="#3087ea"
        android:layout_centerHorizontal="true"
        android:text="@string/bind_tv4"/>
</RelativeLayout>